# civiclibrary

./: AGENTS.md  CHANGELOG.md  MILESTONE_0_7_DONE.md  PRODUCTION_DEPTH_LIBRARY_WORKPAPER_PERSISTENCE_DONE.md  README.md  README.txt  USER-MANUAL.md  USER-MANUAL.txt  pyproject.toml
civiclibrary/: __init__.py  collection.py  main.py  persistence.py  policy.py  programs.py  public_ui.py  reference.py
docs/: IMPLEMENTATION_PLAN.md  MILESTONES.md  RECONCILIATION.md  architecture.md  browser-qa-civiclibrary-v0.1.1-alignment-summary.md  browser-qa-production-depth-library-workpaper-persistence-summary.md  browser-qa-summary.md  github-discussions-seed.md  index.html
scripts/: check-civiccore-placeholder-imports.py  verify-docs.sh  verify-release.sh
tests/: test_civiclibrary_foundation.py  test_production_depth_library_persistence.py  test_runtime_foundation.py
